k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fast-delivery-dev
  labels:
    app: fast-delivery
    environment: dev
